# dftcxx

./: .editorconfig  .gitignore  Makefile  README.md
.github/workflows/: build.yml
molecules/: ar.in  be.in  benzene.in  ch4.in  co.in  ethane.in  h2.in  h2o.in  he.in  lih.in  n2.in  ne.in
scripts/: test_be.py  test_ethane.py  test_h2.py  test_h2o.py  test_he.py  test_li.py  test_n2.py
src/: CMakeLists.txt  atomicgrid.cpp  atomicgrid.h  bragg.h  cgf.cpp  cgf.h  config.h  config.h.in  conjugate_gradient.cpp  conjugate_gradient.h  cspline.cpp  cspline.h  dft.cpp  dft.h  dftcxx.cpp  functionals.cpp  functionals.h  gamma.cpp  gamma.h  gridpoint.cpp  gridpoint.h  integrals.cpp  integrals.h  moleculargrid.cpp  moleculargrid.h  molecule.cpp  molecule.h  pngfuncs.cpp  pngfuncs.h  quadrature.cpp  quadrature.h  rectangulargrid.cpp  rectangulargrid.h  settings.cpp  settings.h  spherical_harmonics.cpp  spherical_harmonics.h
src/cmake/modules/: FindCPPUNIT.cmake
src/test/: CMakeLists.txt  test_molecules.cpp  test_molecules.h  unittest.cpp
src/test/molecules/: h2.in
